compiler/testData/diagnostics/tests/enum/isEnumEntry.fir.kt
enum class MyEnum {
    FIRST,
    SECOND
}

fun foo(me: MyEnum): Boolean = me is <!IS_ENUM_ENTRY!>MyEnum.FIRST<!>
